Agregué mi nombre completo al título
Porque puedo

--- a/blogspot.html
+++ b/blogspot.html
@@ -7,7 +7,7 @@
     <div id="container">
         <div id="cabecera">
             Hyperblog
-            <span id="tagline">Tu blog de cabecera Sebastian</span>
+            <span id="tagline">Tu blog de cabecera Juan Sebastián Vargas</span>
         </div>
         <div id="post">
             <h1>Este es el titulo atractivo e interesante del post</h1>
